--- a/Snake.html
+++ b/Snake.html
@@ -18,14 +18,11 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            overflow: hidden; /* Empêcher le défilement */
         }
 
         #gameContainer {
-            width: 90vw; /* Utiliser 90% de la largeur de l'écran */
-            height: 90vw; /* Utiliser 90% de la largeur de l'écran */
-            max-width: 400px; /* Taille maximale de 400px */
-            max-height: 400px; /* Taille maximale de 400px */
+            width: 400px;
+            height: 400px;
             position: relative;
             background-color: #333;
             border: 2px solid #fff;
@@ -109,6 +106,35 @@
 
         #homeButton:hover {
             background-color: #d32f2f;
+        }
+        @media only screen and (max-width: 600px) {
+            #gameContainer {
+                width: 300px;
+                height: 300px;
+                grid-template-columns: repeat(15, 1fr);
+                grid-template-rows: repeat(15, 1fr);
+            }
+            
+            #score {
+                font-size: 18px;
+            }
+
+            #rules {
+                font-size: 14px;
+            }
+
+            #description {
+                font-size: 12px;
+                max-width: 300px;
+            }
+
+            #startButton {
+                font-size: 14px;
+            }
+
+            #homeButton {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
