--- a/accueil4.html
+++ b/accueil4.html
@@ -56,6 +56,7 @@
             padding: 20px;
             border-radius: 10px;
             margin-top: 20px;
+            position: relative; /* Pour positionner l'indicateur de jouabilité */
         }
 
         .game-link {
@@ -73,6 +74,18 @@
         .game-description {
             color: #999;
         }
+
+        .playable {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: rgba(255, 255, 255, 0.5);
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+            color: #333;
+        }
+
         .button {
             width: 100%;
             padding: 14px 0;
@@ -89,6 +102,7 @@
         .button:hover {
             background-color: #45a049; /* Darker Vert */
         }
+
         @media (max-width: 768px) {
             .container {
                 max-width: 90%;
@@ -105,6 +119,10 @@
             .game-section {
                 padding: 10px;
             }
+
+            .playable {
+                font-size: 12px;
+            }
         }
     </style>
 </head>
@@ -112,11 +130,12 @@
     <div class="container">
         <div class="header">
             <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" alt="Logo" class="logo">
-            <h1>Page de Jeux</h1>
+            <h1>Liste des Jeux</h1>
             <p>Bienvenue sur la page de jeux. Vous pouvez trouver ci-dessous une liste de jeux disponibles.</p>
         </div>
         
         <div class="game-section">
+            <span class="playable">#Multiplatforme</span>
             <a href="Snake.html" class="game-link">Snake</a>
             <p class="game-description">Snake est un jeu classique dans lequel vous contrôlez un serpent qui se déplace sur un plateau. Le serpent peut traverser les murs et réapparaît de l'autre côté. Le but est de manger la nourriture et de devenir le plus long possible sans heurter vous-même. Plus vous mangez de la nourriture, plus le serpent devient long et le jeu s'accélère.</p>
         </div>
