--- a/Snake.html
+++ b/Snake.html
@@ -18,6 +18,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            overflow: hidden;
         }
 
         #gameContainer {
@@ -111,8 +112,8 @@
             #gameContainer {
                 width: 300px;
                 height: 300px;
-                grid-template-columns: repeat(15, 1fr);
-                grid-template-rows: repeat(15, 1fr);
+                grid-template-columns: repeat(20, 1fr);
+                grid-template-rows: repeat(20, 1fr);
             }
             
             #score {
