--- a/accueil4.html
+++ b/accueil4.html
@@ -130,7 +130,7 @@
     <div class="container">
         <div class="header">
             <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" alt="Logo" class="logo">
-            <h1>Liste des Jeux;ll</h1>
+            <h1>Liste des Jeux</h1>
             <p>Bienvenue sur la page de jeux. Vous pouvez trouver ci-dessous une liste de jeux disponibles.</p>
         </div>
         
