--- a/Snake.html
+++ b/Snake.html
@@ -18,6 +18,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            overflow-x:hidden;
         }
 
         #gameContainer {
