--- a/Snake.html
+++ b/Snake.html
@@ -20,7 +20,10 @@
             height: 100vh;
             overflow-x:hidden;
         }
-
+        html, body { 
+    max-width: 100% !important; 
+    overflow-x: hidden !important; 
+} 
         #gameContainer {
             width: 350px;
             height: 350px;
