--- a/Snake.html
+++ b/Snake.html
@@ -18,12 +18,9 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            overflow-x:hidden;
+            overscroll-behavior: contain;
         }
-        html, body { 
-    max-width: 100% !important; 
-    overflow-x: hidden !important; 
-} 
+
         #gameContainer {
             width: 350px;
             height: 350px;
