--- a/Snake.html
+++ b/Snake.html
@@ -18,7 +18,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            overscroll-behavior: contain;
+            overflow: hidden;
         }
 
         #gameContainer {
