--- a/accueil4.html
+++ b/accueil4.html
@@ -97,6 +97,7 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
             margin-top: 20px; 
+            margin-bottom: 60px;
         }
 
         .button:hover {
@@ -138,6 +139,11 @@
             <span class="playable">#Multiplatforme</span>
             <a href="Snake.html" class="game-link">Snake</a>
             <p class="game-description">Snake est un jeu classique dans lequel vous contrôlez un serpent qui se déplace sur un plateau. Le serpent peut traverser les murs et réapparaît de l'autre côté. Le but est de manger la nourriture et de devenir le plus long possible sans heurter vous-même. Plus vous mangez de la nourriture, plus le serpent devient long et le jeu s'accélère.</p>
+        </div>
+        <div class="game-section">
+            <span class="playable">#Multiplatforme</span>
+            <a href="2048.html" class="game-link">2048</a>
+            <p class="game-description">2024 est un jeu de puzzle dans lequel vous combinez des tuiles numérotées pour atteindre la tuile "2048". Le jeu se déroule sur une grille 4x4, et vous pouvez déplacer les tuiles dans quatre directions pour les fusionner. Le but est d'obtenir le plus grand score sans être bloqué (grille pleine et aucune case qui peut se fusionner).</p>
         </div>
     </div>
     <button class="button" onclick="window.location.href='index.html'">Retourner à la page principale</button>
