--- a/2048.html
+++ b/2048.html
@@ -330,6 +330,11 @@
             touchStartY = e.touches[0].clientY;
         }, false);
 
+        document.addEventListener('touchmove', function(e) {
+            // Empêcher le défilement lors du déplacement des tuiles
+            e.preventDefault();
+        }, false);
+
         document.addEventListener('touchend', function(e) {
             touchEndX = e.changedTouches[0].clientX;
             touchEndY = e.changedTouches[0].clientY;
