--- a/2048.html
+++ b/2048.html
@@ -17,18 +17,18 @@
         }
 
         #board {
-            width: 400px;
-            height: 400px;
+            width: 340px;
+            height: 350px;
             background-color: #cdc1b5;
-            border: 6px solid #bbada0;
+            border: 6px solid #000000;
             margin: 0 auto;
             display: flex;
             flex-wrap: wrap;
         }
 
         .tile {
-            width: 90px;
-            height: 90px;
+            width: 75px;
+            height: 75px;
             border: 5px solid #bbada0;
             font-size: 40px;
             font-weight: bold;
