--- a/2048.html
+++ b/2048.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2048</title>
+    <link rel="icon" type="image/png" href="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png">
+
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
