--- a/accueil4.html
+++ b/accueil4.html
@@ -145,6 +145,11 @@
             <a href="2048.html" class="game-link">2048</a>
             <p class="game-description">2024 est un jeu de puzzle dans lequel vous combinez des tuiles numérotées pour atteindre la tuile "2048". Le jeu se déroule sur une grille 4x4, et vous pouvez déplacer les tuiles dans quatre directions pour les fusionner. Le but est d'obtenir le plus grand score sans être bloqué (grille pleine et aucune case qui peut se fusionner).</p>
         </div>
+        <div class="game-section">
+            <span class="playable">#Multiplatforme</span>
+            <a href="colors.html" class="game-link">Colors</a>
+            <p class="game-description">Colors est un jeu de mémoire dans lequel vous devez reproduire une séquence de couleurs de plus en plus longue. Chaque couleur s'illumine dans un ordre aléatoire, et vous devez les sélectionner dans le même ordre pour continuer. Le jeu devient de plus en plus difficile à mesure que vous réussissez à reproduire des séquences plus longues.</p>
+        </div>
     </div>
     <button class="button" onclick="window.location.href='index.html'">Retourner à la page principale</button>
 </body>
