--- a/colors.html
+++ b/colors.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simon Game</title>
+    <title>COLORS</title>
+    <link rel="icon" type="image/png" href="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png">
     <style>
       * {
         padding: 0;
