terror in resonance

--- a/liste_animes.html
+++ b/liste_animes.html
@@ -177,7 +177,14 @@
         "image": "HAPPY SUGAR LIFE.jpg",
         "rating": "7.33",
         "genre": "Romance, Horreur, Myst\u00e8re"
+    },
+    {
+        "name": "Terror in resonance",
+        "image": "TERROR IN RESONANCE.jpg",
+        "rating": "7.875",
+        "genre": "Thriller, Drame , Myst\u00e8re"
     }
+
 ];
 
         function generateAnimeList(animeList, element) {
