--- a/liste_animes.html
+++ b/liste_animes.html
@@ -157,7 +157,7 @@
     {
         "name": "Orange",
         "image": "ORANGE.jpg",
-        "rating": "8.6",
+        "rating": "8.3",
         "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
     },
     {
@@ -183,7 +183,15 @@
         "image": "TERROR IN RESONANCE.jpg",
         "rating": "7.875",
         "genre": "Thriller, Drame , Myst\u00e8re"
+    },
+    {
+        "name": "Anohana",
+        "image": "ANOHANA.jpg",
+        "rating": "8.275",
+        "genre": "Slice of Life, Supernaturel , Roamnce"
+        
     }
+
 
 ];
 
