--- a/accueil.html
+++ b/accueil.html
@@ -255,13 +255,7 @@
     {
         "name": "Orange",
         "image": "ORANGE.jpg",
-        "rating": "8.6",
-        "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
-    },
-    {
-        "name": "Orange",
-        "image": "ORANGE.jpg",
-        "rating": "8.6",
+        "rating": "8.3",
         "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
     },
     {
@@ -287,6 +281,13 @@
         "image": "TERROR IN RESONANCE.jpg",
         "rating": "7.875",
         "genre": "Thriller, Drame , Myst\u00e8re"
+    },
+    {
+        "name": "Anohana",
+        "image": "ANOHANA.jpg",
+        "rating": "8.275",
+        "genre": "Slice of Life, Supernaturel , Roamnce"
+        
     }
 
 ];
