--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         <li><a class="dore" href="accueil.html">critique d'animes</a></li>
         <li><a class="violet" href="accueil2.html">notes de musiques</a></li>
         <li><a class="green" href="accueil4.html">jeux développés</a></li>
-        <li>???</li>
+        <li>rien ici</li>
       </ul>
 
     </div>
