--- a/accueil.html
+++ b/accueil.html
@@ -288,6 +288,12 @@
         "rating": "8.275",
         "genre": "Slice of Life, Supernaturel , Roamnce"
         
+    },
+    {
+        "name": "Blade & Soul",
+        "image": "BLADE & SOUL.jpg",
+        "rating": "2.7",
+        "genre": "Action, Aventure, Fantasie"
     }
 
 ];
