--- a/liste_animes.html
+++ b/liste_animes.html
@@ -127,6 +127,7 @@
         <select id="sort-selector">
             <option value="name">Trier par nom</option>
             <option value="genre">Trier par genre</option>
+            <option value="rating">Trier par note</option>
         </select>
 
         <input type="text" id="search-bar" placeholder="Rechercher...">
@@ -136,64 +137,68 @@
 
     <script>
         var animeList = [
-    {
-        "name": "Serial Experiments Lain",
-        "image": "SERIAL EXPERIMENTS LAIN.jpg",
-        "rating": "7.525",
-        "genre": "Drame, Horreur, Science-fiction"
-    },
-    {
-        "name": "Paranoia Agent",
-        "image": "PARANOIA AGENT.jpg",
-        "rating": "8.1",
-        "genre": "Drame, Psychologique, Surnaturel"
-    },
-    {
-        "name": "Love Flops",
-        "image": "LOVE FLOPS.jpg",
-        "rating": "3.25",
-        "genre": "Myst\u00e8re, Romance, Ecchi"
-    },
-    {
-        "name": "Orange",
-        "image": "ORANGE.jpg",
-        "rating": "8.3",
-        "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
-    },
-    {
-        "name": "Fireworks",
-        "image": "FIREWORKS.jpg",
-        "rating": "5,125",
-        "genre": "Drame, Romance, Surnaturel"
-    },
-    {
-        "name": "King's Game",
-        "image": "KINGS GAME.jpg",
-        "rating": "1.325",
-        "genre": "Drame, Horreur, Myst\u00e8re"
-    },
-    {
-        "name": "Happy Sugar Life",
-        "image": "HAPPY SUGAR LIFE.jpg",
-        "rating": "7.33",
-        "genre": "Romance, Horreur, Myst\u00e8re"
-    },
-    {
-        "name": "Terror in resonance",
-        "image": "TERROR IN RESONANCE.jpg",
-        "rating": "7.875",
-        "genre": "Thriller, Drame , Myst\u00e8re"
-    },
-    {
-        "name": "Anohana",
-        "image": "ANOHANA.jpg",
-        "rating": "8.275",
-        "genre": "Slice of Life, Supernaturel , Roamnce"
-        
-    }
+            {
+                "name": "Serial Experiments Lain",
+                "image": "SERIAL EXPERIMENTS LAIN.jpg",
+                "rating": "7.525",
+                "genre": "Drame, Horreur, Science-fiction"
+            },
+            {
+                "name": "Paranoia Agent",
+                "image": "PARANOIA AGENT.jpg",
+                "rating": "8.1",
+                "genre": "Drame, Psychologique, Surnaturel"
+            },
+            {
+                "name": "Love Flops",
+                "image": "LOVE FLOPS.jpg",
+                "rating": "3.25",
+                "genre": "Myst\u00e8re, Romance, Ecchi"
+            },
+            {
+                "name": "Orange",
+                "image": "ORANGE.jpg",
+                "rating": "8.3",
+                "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
+            },
+            {
+                "name": "Fireworks",
+                "image": "FIREWORKS.jpg",
+                "rating": "5,125",
+                "genre": "Drame, Romance, Surnaturel"
+            },
+            {
+                "name": "King's Game",
+                "image": "KINGS GAME.jpg",
+                "rating": "1.325",
+                "genre": "Drame, Horreur, Myst\u00e8re"
+            },
+            {
+                "name": "Happy Sugar Life",
+                "image": "HAPPY SUGAR LIFE.jpg",
+                "rating": "7.33",
+                "genre": "Romance, Horreur, Myst\u00e8re"
+            },
+            {
+                "name": "Terror in resonance",
+                "image": "TERROR IN RESONANCE.jpg",
+                "rating": "7.875",
+                "genre": "Thriller, Drame , Myst\u00e8re"
+            },
+            {
+                "name": "Anohana",
+                "image": "ANOHANA.jpg",
+                "rating": "8.275",
+                "genre": "Slice of Life, Supernaturel , Roamnce"
 
-
-];
+            },
+            {
+                "name": "Blade & Soul",
+                "image": "BLADE & SOUL.jpg",
+                "rating": "2.7",
+                "genre": "Action, Aventure, Fantasie"
+            }
+        ];
 
         function generateAnimeList(animeList, element) {
             var sortBy = document.getElementById('sort-selector').value;
@@ -278,8 +283,81 @@
                     categoryTitle.appendChild(animeListForGenre);
                     element.appendChild(categoryTitle);
                 });
+            } else if (sortBy === 'rating') {
+                var ratingCategories = {
+                    '10-9': [],
+                    '8.99-8': [],
+                    '7.99-7': [],
+                    '6.99-6': [],
+                    '5.99-5': [],
+                    '4.99-4': [],
+                    '3.99-3': [],
+                    '2.99-2': [],
+                    '1.99-1': [],
+                    '0.99-0': []
+                };
+
+                animeList.forEach(function(anime) {
+                    var rating = parseFloat(anime.rating.replace(',', '.'));
+                    if (rating <= 10 && rating >= 9) {
+                        ratingCategories['10-9'].push(anime);
+                    } else if (rating < 9 && rating >= 8) {
+                        ratingCategories['8.99-8'].push(anime);
+                    } else if (rating < 8 && rating >= 7) {
+                        ratingCategories['7.99-7'].push(anime);
+                    } else if (rating < 7 && rating >= 6) {
+                        ratingCategories['6.99-6'].push(anime);
+                    } else if (rating < 6 && rating >= 5) {
+                        ratingCategories['5.99-5'].push(anime);
+                    } else if (rating < 5 && rating >= 4) {
+                        ratingCategories['4.99-4'].push(anime);
+                    } else if (rating < 4 && rating >= 3) {
+                        ratingCategories['3.99-3'].push(anime);
+                    } else if (rating < 3 && rating >= 2) {
+                        ratingCategories['2.99-2'].push(anime);
+                    } else if (rating < 2 && rating >= 1) {
+                        ratingCategories['1.99-1'].push(anime);
+                    } else if (rating < 1 && rating >= 0) {
+                        ratingCategories['0.99-0'].push(anime);
+                    }
+                });
+
+                element.innerHTML = '';
+
+                Object.keys(ratingCategories).forEach(function(ratingRange) {
+                    var sortedAnimes = ratingCategories[ratingRange].sort(function(a, b) {
+                        return parseFloat(b.rating.replace(',', '.')) - parseFloat(a.rating.replace(',', '.'));
+                    });
+
+                    var categoryTitle = document.createElement("div");
+                    categoryTitle.classList.add("category");
+                    categoryTitle.innerHTML = "<h2 class='category-title' data-genre='" + ratingRange + "'>" + ratingRange + "</h2>";
+                    var animeListForRating = document.createElement("ul");
+                    animeListForRating.classList.add("anime-list");
+                    sortedAnimes.forEach(function(anime) {
+                        var listItem = document.createElement("li");
+                        listItem.classList.add("anime-item");
+                        var link = document.createElement("a");
+                        link.innerHTML = "<strong>" + anime.name + "</strong>"; 
+                        link.href = anime.name.toLowerCase().replace(/\s+/g, '-') + ".html";
+                        var image = document.createElement("img");
+                        image.classList.add("anime-image");
+                        image.src = "images_Animes/" + anime.image;
+                        image.alt = "Image de " + anime.name;
+                        var info = document.createElement("span");
+                        info.classList.add("anime-info");
+                        info.innerHTML = "Note : " + "<span class='bold'>" + anime.rating + "</span> | Genres : " + "<span class='bold'>" + anime.genre + "</span>";
+                        listItem.appendChild(image);
+                        listItem.appendChild(link);
+                        listItem.appendChild(info);
+                        animeListForRating.appendChild(listItem);
+                    });
+                    categoryTitle.appendChild(animeListForRating);
+                    element.appendChild(categoryTitle);
+                });
             }
         }
+
         generateAnimeList(animeList, document.getElementById("animeList"));
         document.getElementById('sort-selector').addEventListener('change', function() {
             var animeListDiv = document.getElementById("animeList");
