--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     .green {
       color: #52f552
     }
+    .orange {
+      color:rgb(255, 81, 0)
+    }
     #random-char {
             font-size: 2;
         }
@@ -388,7 +391,7 @@
         <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
     </a>
 
-    <a href="accueil.html">
+    <a href="accueil3.html">
         <img src="200px-Yoshi_Egg_Red_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
         <img src="200px-Yoshi_Egg_Red_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
         <img src="200px-Yoshi_Egg_Red_Artwork_-_Yoshi_s_New_Island.png" class="moving-image">
@@ -510,7 +513,7 @@
         <li><a class="dore" href="accueil.html">critique d'animes</a></li>
         <li><a class="violet" href="accueil2.html">notes de musiques</a></li>
         <li><a class="green" href="accueil4.html">jeux développés</a></li>
-        <li>r</li>
+        <li><a class="orange" href="accueil3.html">autres</a></li>
       </ul>
 
     </div>
@@ -571,39 +574,7 @@
         }, 100); // Rafraîchir toutes les 100 millisecondes
       }
     });
-    document.addEventListener("DOMContentLoaded", function(event) {
-            const randomCharElement = document.getElementById('random-char');
 
-            function getRandomCharacter() {
-                const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-                return characters.charAt(Math.floor(Math.random() * characters.length));
-            }
-
-            function getRandomString(length) {
-                let result = '';
-                for (let i = 0; i < length; i++) {
-                    result += getRandomCharacter();
-                }
-                return result;
-            }
-
-            function getRandomColor() {
-                const letters = '0123456789ABCDEF';
-                let color = '#';
-                for (let i = 0; i < 6; i++) {
-                    color += letters[Math.floor(Math.random() * 16)];
-                }
-                return color;
-            }
-
-            setInterval(() => {
-                const randomStringLength = Math.floor(Math.random() * (10 - 1 + 1)) + 3; // Longueur de chaîne entre 1 et 10
-                randomCharElement.textContent = getRandomString(randomStringLength);
-                randomCharElement.style.color = getRandomColor();
-                randomCharElement.style.fontSize = getRandomFontSize() + 'px';
-            }, 500); // Changer toutes les 500 millisecondes
-
-          })
   </script>
 </body>
 </html>
