--- a/liste_animes.html
+++ b/liste_animes.html
@@ -197,6 +197,13 @@
                 "image": "BLADE & SOUL.jpg",
                 "rating": "2.7",
                 "genre": "Action, Aventure, Fantasie"
+            },
+            {
+                "name": "Hanasaku Iroha",
+                "image": "HANASAKU IROHA.jpg",
+                "rating": "8.65",
+                "genre": "Slice of Life, Comédie, Drama"
+
             }
         ];
 
