--- a/komori-san-wa-kotowarenai!.html
+++ b/komori-san-wa-kotowarenai!.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
         <h2>Komori-San Wa Kotowarenai!</h2>
-        <img src="images_Animes/KOMORI-SAN WA KOTOWARENAI.jpg" alt="Image de l'anime">
+        <img src="images_Animes/KOMORI-SAN WA KOTOWARENAI!.jpg" alt="Image de l'anime">
         <div class="info-box">
             <div class="rating">
                 5.65/10
             </div>
-            <p>Lien de l'anime : <a href="https://www.youtube.com/watch?v=M_DeVjHUk3I">Komori-San Wa Kotowarenai</a></p>
+            <p>Lien de l'anime : <a href="https://www.youtube.com/watch?v=M_DeVjHUk3I">Komori-San Wa Kotowarenai!</a></p>
             <p>Genres : <span class="genre-info">Slice of Life, Comédie</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">12 (durée 2 minutes)</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">Terminé</span> <br> Date de diffusion : <span class="date-info">2015</span></p>
