--- a/liste_animes.html
+++ b/liste_animes.html
@@ -210,7 +210,13 @@
                 "image": "JINGAI-SAN NO YOME.jpg",
                 "rating": "2",
                 "genre": "Romance, Comédie, Fantastique"
-            }
+            },
+            {
+                "name": "Komori-San Wa Kotowarenai!",
+                "image": "KOMORI-SAN WA KOTOWARENAI!.jpg",
+                "rating": "5,65",
+                "genre": "Slice of Life, Comédie"
+    }
         ];
 
         function generateAnimeList(animeList, element) {
