--- a/accueil.html
+++ b/accueil.html
@@ -313,6 +313,12 @@
                 "image": "KOMORI-SAN WA KOTOWARENAI!.jpg",
                 "rating": "5,65",
                 "genre": "Slice of Life, Comédie"
+    },
+    {
+                "name": "Hal",
+                "image": "HAL.jpg",
+                "rating": "8.75",
+                "genre": "Drame, Romance, Sci-fi"
     }
     
             
