--- a/liste_animes.html
+++ b/liste_animes.html
@@ -214,8 +214,14 @@
             {
                 "name": "Komori-San Wa Kotowarenai!",
                 "image": "KOMORI-SAN WA KOTOWARENAI!.jpg",
-                "rating": "5,65",
+                "rating": "5.65",
                 "genre": "Slice of Life, Comédie"
+    },
+    {
+                "name": "Hal",
+                "image": "HAL.jpg",
+                "rating": "8.75",
+                "genre": "Drame, Romance, Sci-fi"
     }
         ];
 
