--- a/liste_animes.html
+++ b/liste_animes.html
@@ -222,6 +222,13 @@
                 "image": "HAL.jpg",
                 "rating": "8.75",
                 "genre": "Drame, Romance, Sci-fi"
+    },
+    {
+        "name": "Hourou Musuko",
+        "image": "HOUROU MUSUKO.jpg",
+        "rating": "8.65",
+        "genre": "Slice of Life, Romance, Drame"
+
     }
         ];
 
