--- a/anohana.html
+++ b/anohana.html
@@ -16,7 +16,7 @@
                 8.275/10
             </div>
             <p>Lien de l'anime : <a href="https://anime-sama.fr/catalogue/anohana/">Anohana</a></p>
-            <p>Genres : <span class="genre-info">Drame, Romance, Slice of Life, Supernaturel</span></p>
+            <p>Genres : <span class="genre-info">Drame, Romance, Slice of Life, Surnaturel</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">11</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">Terminé</span> <br> Date de diffusion : <span class="date-info">2011</span></p>
             <p>Opening : <span class="opening-info">8/10</span> <br> Ending : <span class="ending-info">7.5/10</span></p>
