--- a/liste_animes.html
+++ b/liste_animes.html
@@ -189,7 +189,7 @@
                 "name": "Anohana",
                 "image": "ANOHANA.jpg",
                 "rating": "8.275",
-                "genre": "Slice of Life, Supernaturel , Roamnce"
+                "genre": "Slice of Life, Surnaturel , Roamnce"
 
             },
             {
@@ -229,6 +229,12 @@
         "rating": "8.65",
         "genre": "Slice of Life, Romance, Drame"
 
+    },
+    {
+        "name": "Pupa",
+        "image": "PUPA.jpg",
+        "rating": "0.7",
+        "genre": "Horreur, Psychologique, Surnaturel"
     }
         ];
 
