--- a/liste_animes.html
+++ b/liste_animes.html
@@ -235,6 +235,12 @@
         "image": "PUPA.jpg",
         "rating": "0.7",
         "genre": "Horreur, Psychologique, Surnaturel"
+    },
+    {
+        "name": "Barakamon",
+        "image": "BARAKAMON.jpg",
+        "rating": "8.75",
+        "genre": "Slice of Life, Comédie"
     }
         ];
 
