--- a/liste_animes.html
+++ b/liste_animes.html
@@ -141,7 +141,7 @@
                 "name": "Serial Experiments Lain",
                 "image": "SERIAL EXPERIMENTS LAIN.jpg",
                 "rating": "7.825",
-                "genre": "Drame, Horreur, Science-fiction"
+                "genre": "Drame, Horreur, Sci-fi"
             },
             {
                 "name": "Paranoia Agent",
@@ -159,7 +159,7 @@
                 "name": "Orange",
                 "image": "ORANGE.jpg",
                 "rating": "8.3",
-                "genre": "Sh\u00f4jo, Slice-of-Life, Surnaturel"
+                "genre": "Sh\u00f4jo, Slice of Life, Surnaturel"
             },
             {
                 "name": "Fireworks",
@@ -189,7 +189,7 @@
                 "name": "Anohana",
                 "image": "ANOHANA.jpg",
                 "rating": "8.275",
-                "genre": "Slice of Life, Surnaturel , Roamnce"
+                "genre": "Slice of Life, Surnaturel , Romance"
 
             },
             {
@@ -241,6 +241,12 @@
         "image": "BARAKAMON.jpg",
         "rating": "8.75",
         "genre": "Slice of Life, Comédie"
+    },
+    {
+        "name": "Eve No Jikan",
+        "image": "EVE NO JIKAN.jpg",
+        "rating": "7.5",
+        "genre": "Slice of Life, Sci-Fi"
     }
         ];
 
