--- a/orange.html
+++ b/orange.html
@@ -15,7 +15,7 @@
                 8.3/10
             </div>
             <p>Lien de l'anime : <a href="https://anime-sama.fr/catalogue/orange/">Orange</a></p>
-            <p>Genres : <span class="genre-info">Drame, Mystère, Romance, School-Life, Shôjo, Slice-of-Life, Surnaturel</span></p>
+            <p>Genres : <span class="genre-info">Drame, Mystère, Romance, Shôjo, Slice of Life, Surnaturel</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">13</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">terminé</span> <br> Date de diffusion : <span class="date-info">2016</span></p>
             <p>Opening : <span class="opening-info">6/10</span> <br> Ending : <span class="ending-info">7/10</span></p>
