--- a/serial-experiments-lain.html
+++ b/serial-experiments-lain.html
@@ -16,7 +16,7 @@
                 7.825/10
             </div>
             <p>Lien de l'anime : <a href="https://anime-sama.fr/catalogue/serial-experiments-lain/">Serial Experiments Lain</a></p>
-            <p>Genres : <span class="genre-info">Drame, Horreur, Epouvante, Mystère, Psychologique, Science-fiction, Surnaturel</span></p>
+            <p>Genres : <span class="genre-info">Drame, Horreur, Epouvante, Mystère, Psychologique, Sci-fi, Surnaturel</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">13</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">Terminé</span> <br> Date de diffusion : <span class="date-info">1998</span></p>
             <p>Opening : <span class="opening-info">7.5/10</span> <br> Ending : <span class="ending-info">3/10</span></p>
