--- a/liste_animes.html
+++ b/liste_animes.html
@@ -247,6 +247,12 @@
         "image": "EVE NO JIKAN.jpg",
         "rating": "7.5",
         "genre": "Slice of Life, Sci-Fi"
+    },
+    {
+        "name": "Elfen Lied",
+        "image": "ELFEN LIED.jpg",
+        "rating": "9",
+        "genre": "Sci-fi, Horreur, Psychologique"
     }
         ];
 
