--- a/accueil.html
+++ b/accueil.html
@@ -350,6 +350,12 @@
         "image": "ELFEN LIED.jpg",
         "rating": "9",
         "genre": "Sci-fi, Horreur, Psychologique"
+    },
+    {
+        "name": "Deadman Wonderland",
+        "image": "DEADMAN WONDERLAND.jpg",
+        "rating": "6.8",
+        "genre": "Sci-fi, Shônen, Surnaturel"
     }
         ];
         
