--- a/accueil.html
+++ b/accueil.html
@@ -343,7 +343,7 @@
         "name": "Eve No Jikan",
         "image": "EVE NO JIKAN.jpg",
         "rating": "7.5",
-        "genre": "Slice of Life, Sci-Fi"
+        "genre": "Slice of Life, Sci-fi"
     },
     {
         "name": "Elfen Lied",
