--- a/liste_animes.html
+++ b/liste_animes.html
@@ -259,6 +259,12 @@
         "image": "DEADMAN WONDERLAND.jpg",
         "rating": "6.8",
         "genre": "Sci-fi, Shônen, Surnaturel"
+    },
+    {
+        "name": "Clannad",
+        "image": "CLANNAD.jpg",
+        "rating": "8.95",
+        "genre": "Romance, Slice of Life, Surnaturel"
     }
         ];
 
