--- a/liste_animes.html
+++ b/liste_animes.html
@@ -265,7 +265,14 @@
         "image": "CLANNAD.jpg",
         "rating": "8.95",
         "genre": "Romance, Slice of Life, Surnaturel"
+    },
+    {
+        "name": "Gakuen Basara",
+        "image": "GAKUEN BASARA.jpg",
+        "rating": "4.2",
+        "genre": "Action, Aventure, Comédie"
     }
+
         ];
 
         function generateAnimeList(animeList, element) {
