--- a/accueil.html
+++ b/accueil.html
@@ -362,7 +362,14 @@
         "image": "CLANNAD.jpg",
         "rating": "8.95",
         "genre": "Romance, Slice of Life, Surnaturel"
+    },
+    {
+        "name": "Gakuen Basara",
+        "image": "GAKUEN BASARA.jpg",
+        "rating": "4.2",
+        "genre": "Action, Aventure, Comédie"
     }
+
         ];
         
         var animeInput = document.getElementById("animeInput");
