--- a/accueil.html
+++ b/accueil.html
@@ -368,6 +368,12 @@
         "image": "GAKUEN BASARA.jpg",
         "rating": "4.2",
         "genre": "Action, Aventure, Comédie"
+    },
+    {
+        "name": "Iroduku",
+        "image": "Iroduku.jpg",
+        "rating": "7.8",
+        "genre": "Romance, Slice-of-Life, Surnaturel"
     }
 
         ];
