--- a/accueil.html
+++ b/accueil.html
@@ -374,6 +374,12 @@
         "image": "Iroduku.jpg",
         "rating": "7.8",
         "genre": "Romance, Slice-of-Life, Surnaturel"
+    },
+    {
+        "name": "Mind Game",
+        "image": "MIND GAME.jpg",
+        "rating": "8.85",
+        "genre": "Psychologique, Romance, Comédie"
     }
 
         ];
