--- a/liste_animes.html
+++ b/liste_animes.html
@@ -277,6 +277,12 @@
         "image": "Iroduku.jpg",
         "rating": "7.8",
         "genre": "Romance, Slice-of-Life, Surnaturel"
+    },
+    {
+        "name": "Mind Game",
+        "image": "MIND GAME.jpg",
+        "rating": "8.85",
+        "genre": "Psychologique, Romance, Comédie"
     }
 
 
