--- a/accueil.html
+++ b/accueil.html
@@ -371,7 +371,7 @@
     },
     {
         "name": "Iroduku",
-        "image": "Iroduku.jpg",
+        "image": "IRODUKU.jpg",
         "rating": "7.8",
         "genre": "Romance, Slice-of-Life, Surnaturel"
     },
