--- a/liste_animes.html
+++ b/liste_animes.html
@@ -274,7 +274,7 @@
     },
     {
         "name": "Iroduku",
-        "image": "Iroduku.jpg",
+        "image": "IRODUKU.jpg",
         "rating": "7.8",
         "genre": "Romance, Slice-of-Life, Surnaturel"
     },
