--- a/mind-game.html
+++ b/mind-game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="anime.css">
     <link rel="icon" type="image/png" href="logo.png">
-    <title>Hal
+    <title>Mind Game
     </title>
 </head>
 <body>
