--- a/liste_animes.html
+++ b/liste_animes.html
@@ -283,6 +283,12 @@
         "image": "MIND GAME.jpg",
         "rating": "8.85",
         "genre": "Psychologique, Romance, Comédie"
+    },
+    {
+        "name": "Qualidea Code",
+        "image": "QUALIDEA CODE.jpg",
+        "rating": "4.5",
+        "genre": "Action, Sci-fi, Surnaturel"
     }
 
 
