--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <img src="oeuf_vert.png" alt="Œuf vert" width="85%">
   </a>
 
-  <a href="" class="egg nig">
+  <a href="ee.html" class="egg nig">
     <img src="oeuf_noir.png" alt="oeuf noir" width="85%">
   </a>
 </body>
