--- a/ee.html
+++ b/ee.html
@@ -4,76 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>U found it GG</title>
+    <style>
+        body, html {
+            height: 100%; 
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            position: relative;
+        }
+
+        .text h1, .text p {
+            color: white;
+        }
+
+        .text {
+            text-align: center;
+            border: 3px solid orange;
+            border-radius: 20px;
+            padding: 10px;
+            margin: 20px;
+            background-color: #222;
+            box-shadow: 0 0 10px #fff;
+        }
+
+        .yoshi img {
+            transition: transform 0.3s ease;
+        }
+
+        .yoshi img:hover {
+            transform: scale(1.1); 
+        }
+    </style>
 </head>
-
-<style>
-    body, html {
-        height: 100%;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #000;
-        position: relative;
-    }
-
-    .text h1 {
-        color: white;
-    }
-
-    .text p {
-        color: white;
-    }
-
-    .text {
-        text-align: center;
-        border: 3px solid orange;
-        border-radius: 20px;
-        padding: 10px;
-        margin: 20px;
-        background-color: #222;
-        box-shadow: 0 0 10px #fff;
-    }
-
-    .yoshi img {
-        transition: transform 0.3s ease;
-    }
-
-    /* Animation hover sur l'image du gros Yoshi */
-    .yoshi img {
-        transition: transform 0.3s ease;
-    }
-
-    /* Animation hover sur l'image du gros Yoshi */
-    .yoshi img:hover {
-        transform: scale(1.1); /* Effet de zoom */
-    }
-</style>
-
-<!-- Son joué lors du chargement de la page -->
-<audio id="audio" src="111_HKJkJTm.mp3" preload="auto"></audio>
-
-<!-- Son joué au hover sur l'image -->
-<audio id="yoshi" src="yoshi-tongue.mp3" preload="auto"></audio>
-
-<script>
-    // Jouer le son lorsque la page est complètement chargée
-    window.addEventListener('load', function() {
-        var audio = document.getElementById('audio');
-        audio.play();
-    });
-
-    // Jouer un son au hover sur l'image
-    const yoshiImg = document.querySelector('.yoshi img');
-    const hoverSound = document.getElementById('yoshi');
-
-    yoshiImg.addEventListener('mouseenter', function() {
-        hoverSound.currentTime = 0; // Repartir le son de zéro
-        hoverSound.play();
-    });
-
-</script>
-
 <body>
     <div class="text">
         <h1>GG tu m'as trouvé</h1>
@@ -83,5 +47,28 @@
     <div class="yoshi">
         <img src="fat_yoshi.png" alt="gros yoshi" width="500px">
     </div>
+
+    <audio id="background-music" src="07. Flower Garden.mp3" preload="auto" loop></audio>
+    <audio id="yoshi-sound" src="yoshi-tongue.mp3" preload="auto"></audio>
+
+    <script>
+        window.addEventListener('load', function() {
+            const bgMusic = document.getElementById('background-music');
+            bgMusic.volume = 0.1;
+            bgMusic.play().catch(error => console.log("Erreur de lecture de la musique :", error));
+        });
+
+        const yoshiImg = document.querySelector('.yoshi img');
+        const yoshiSound = document.getElementById('yoshi-sound');
+        yoshiSound.volume = 0.5; 
+
+        function playYoshiSound() {
+            yoshiSound.currentTime = 0; 
+            yoshiSound.play().catch(error => console.log("Erreur de lecture du son Yoshi :", error));
+        }
+
+        yoshiImg.addEventListener('mouseenter', playYoshiSound);
+        yoshiImg.addEventListener('click', playYoshiSound);
+    </script>
 </body>
 </html>
