--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     .egg.nig { animation: rotate_noir 25s linear infinite; }
 
     @media (max-width: 1000px) {
-            html {
+            html, body {
       overflow: hidden;
     }
     .info-box ul li a{
