--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     }
 
     .info-box {
-      width: 70vw; /* Ajuste la largeur selon la taille de l'écran */
-      max-width: 500px; /* Limite la largeur maximale pour les grands écrans */
+      width: 70vw; 
+      max-width: 500px; 
       height: 70vw;
       max-height: 500px;
       background-color: #222;
-      border-radius: 50%; /* Rond parfait */
+      border-radius: 50%; 
       box-shadow: 0 0 25px #fff;
       padding: 20px;
       color: #fff;
@@ -162,9 +162,9 @@
       overflow: hidden;
     }
     .info-box ul li a{
-        font-size: 10px; /* Réduire la taille de la police */
+        font-size: 10px; 
         padding: 10px;
-        margin: 0px;   /* Ajuster le padding pour rendre les éléments plus compacts */
+        margin: 0px;  
     }
 
     .info-box ul li {
@@ -178,17 +178,17 @@
     }
 
     .info-box {
-        width: 300px; /* Réduire la taille de la boîte sur les petits écrans */
+        width: 300px; 
         height: 300px;
         padding: 10px;
     }
 
     .info-box h2 {
-        font-size: 22px; /* Réduire la taille du titre */
+        font-size: 22px; 
     }
 
     .info-box p {
-        font-size: 18px; /* Réduire la taille du paragraphe */
+        font-size: 18px;
     }
         }
    
@@ -200,8 +200,8 @@
     <p>Bienvenue, où souhaitez-vous aller ?</p>
     <ul>
       <li><a class="dore" href="accueil.html">critique d'animes</a></li>
-      <li><a class="violet" href="accueil2.html">notes de musiques</a></li>
-      <li><a class="green" href="accueil4.html">jeux développés</a></li>
+      <li><a class="violet" href="accueil2.html">Quiz</a></li>
+      <li><a class="green" href="accueil4.html">Dle</a></li>
       <li><a class="orange" href="accueil3.html">autres</a></li>
     </ul>
   </div>
