--- a/accueil4.html
+++ b/accueil4.html
@@ -110,26 +110,11 @@
     <div class="container">
         <div class="header">
             <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" alt="Logo" class="logo">
-            <h1>Liste des Jeux</h1>
-            <p>Bienvenue sur la page de jeux. Vous pouvez trouver ci-dessous une liste de jeux disponibles.</p>
+            <h1>Dle game</h1>
         </div>
-        
-        <div class="game-section">
-            <span class="playable">#Multiplatforme</span>
-            <a href="Snake.html" class="game-link">Snake</a>
-            <p class="game-description">Snake est un jeu classique dans lequel vous contrôlez un serpent qui se déplace sur un plateau. Le serpent peut traverser les murs et réapparaît de l'autre côté. Le but est de manger la nourriture et de devenir le plus long possible sans heurter vous-même. Plus vous mangez de la nourriture, plus le serpent devient long et le jeu s'accélère.</p>
-        </div>
-        <div class="game-section">
-            <span class="playable">#Multiplatforme</span>
-            <a href="2048.html" class="game-link">2048</a>
-            <p class="game-description">2024 est un jeu de puzzle dans lequel vous combinez des tuiles numérotées pour atteindre la tuile "2048". Le jeu se déroule sur une grille 4x4, et vous pouvez déplacer les tuiles dans quatre directions pour les fusionner. Le but est d'obtenir le plus grand score sans être bloqué (grille pleine et aucune case qui peut se fusionner).</p>
-        </div>
-        <div class="game-section">
-            <span class="playable">#Multiplatforme</span>
-            <a href="colors.html" class="game-link">Colors</a>
-            <p class="game-description">Colors est un jeu de mémoire dans lequel vous devez reproduire une séquence de couleurs de plus en plus longue. Chaque couleur s'illumine dans un ordre aléatoire, et vous devez les sélectionner dans le même ordre pour continuer. Le jeu devient de plus en plus difficile à mesure que vous réussissez à reproduire des séquences plus longues.</p>
-        </div>
+
+        <button class="button" onclick="window.location.href='Monogataridle.html'">Jouer à Monogatari dle</button>
+        <button class="button" onclick="window.location.href='index.html'">Retourner à la page principale</button>
     </div>
-    <button class="button" onclick="window.location.href='index.html'">Retourner à la page principale</button>
 </body>
 </html>
