--- a/accueil4.html
+++ b/accueil4.html
@@ -110,7 +110,7 @@
     <div class="container">
         <div class="header">
             <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" alt="Logo" class="logo">
-            <h1>Dle game</h1>
+            <h1>Dle games</h1>
         </div>
 
         <button class="button" onclick="window.location.href='MonogatariDle.html'">Jouer à Monogatari dle</button>
