--- a/accueil4.html
+++ b/accueil4.html
@@ -39,7 +39,7 @@
         h1 {
             font-size: 48px;
             margin-bottom: 1px;
-            color: #52f552; /* Vert */
+            color: #52f552;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             text-align: center;
             margin-top: 1px;
@@ -56,11 +56,11 @@
             padding: 20px;
             border-radius: 10px;
             margin-top: 20px;
-            position: relative; /* Pour positionner l'indicateur de jouabilité */
+            position: relative;
         }
 
         .game-link {
-            color: #52f552; /* Orange */
+            color: #52f552; 
             text-decoration: none;
             font-size: 18px;
             margin-bottom: 10px;
@@ -89,7 +89,7 @@
         .button {
             width: 100%;
             padding: 14px 0;
-            background-color: #4CAF50; /* Vert */
+            background-color: #4CAF50; 
             color: #fff;
             border: none;
             border-radius: 25px;
@@ -101,7 +101,7 @@
         }
 
         .button:hover {
-            background-color: #45a049; /* Darker Vert */
+            background-color: #45a049; 
         }
 
     </style>
